--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\Matheus\\AppData\\Roaming\\NetBeans\\13\\config\\PayaraEE6\\Properties\\pfv3-1913500881.properties
+deploy.ant.properties.file=/home/lucasbpo/.netbeans/13/config/PayaraEE6/Properties/pfv31732263455.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Matheus/Payara_Server/glassfish/domains/domain1
-j2ee.server.home=C:/Users/Matheus/Payara_Server/glassfish
-j2ee.server.instance=[C:\\Users\\Matheus\\Payara_Server\\glassfish;C:\\Users\\Matheus\\Payara_Server\\glassfish\\domains\\domain1]deployer:pfv5ee8:localhost:4848
-j2ee.server.middleware=C:/Users/Matheus/Payara_Server
-user.properties.file=C:\\Users\\Matheus\\AppData\\Roaming\\NetBeans\\13\\build.properties
+j2ee.server.domain=/home/lucasbpo/.payara/glassfish/domains/domain1
+j2ee.server.home=/home/lucasbpo/.payara/glassfish
+j2ee.server.instance=[/home/lucasbpo/.payara/glassfish:/home/lucasbpo/.payara/glassfish/domains/domain1]deployer:pfv5ee8:localhost:4848
+j2ee.server.middleware=/home/lucasbpo/.payara
+user.properties.file=/home/lucasbpo/.netbeans/13/build.properties
